Оптимизация и ускорение Мостурфлота